--- a/Templates/AppSource App/.AL-Go/settings.json
+++ b/Templates/AppSource App/.AL-Go/settings.json
@@ -2,6 +2,9 @@
     "type": "AppSource App",
     "country": "us",
     "KeyVaultName": "",
+    "AppSourceCopMandatoryAffixes": [
+        "<affix>"
+    ],
     "appFolders": [
     ],
     "testFolders": [
