--- a/Templates/AppSource App/.github/workflows/CreateTestApp.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateTestApp.yaml
@@ -3,6 +3,10 @@ name: Create a new test app
 on:
   workflow_dispatch:
     inputs:
+      project:
+        description: Project name if the repository is setup for multiple projects
+        required: false
+        default: '.'
       name:
         description: Name
         required: true
@@ -31,6 +35,7 @@ jobs:
       - name: Creating a new test app
         uses: microsoft/AL-Go/CreateApp@main
         with:
+          project: ${{ github.event.inputs.project }}
           type: 'Test App'
           publisher: ${{ github.event.inputs.publisher }}
           name: ${{ github.event.inputs.name }}
