--- a/Templates/Per Tenant Extension/.github/workflows/AddExistingAppOrTestApp.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/AddExistingAppOrTestApp.yaml
@@ -3,6 +3,10 @@ name: Add existing app or test app
 on:
   workflow_dispatch:
     inputs:
+      project:
+        description: Project name if the repository is setup for multiple projects
+        required: false
+        default: '.'
       url:
         description: Direct Download Url of .app or .zip file
         required: true
@@ -22,5 +26,6 @@ jobs:
       - name: Add existing app
         uses: microsoft/AL-Go/AddExistingApp@main
         with:
+          project: ${{ github.event.inputs.project }}
           url: ${{ github.event.inputs.url }}
           directCommit: ${{ github.event.inputs.directCommit }}
