Change github runner to be an array

--- a/Templates/AppSource App/.github/workflows/AddExistingAppOrTestApp.yaml
+++ b/Templates/AppSource App/.github/workflows/AddExistingAppOrTestApp.yaml
@@ -20,7 +20,7 @@ defaults:
 
 jobs:
   update:
-    runs-on: windows-latest
+    runs-on: [ windows-latest ]
 
     steps:
       - name: Add existing app
