--- a/Templates/Per Tenant Extension/.github/workflows/CreateTestApp.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateTestApp.yaml
@@ -29,7 +29,7 @@ defaults:
 
 jobs:
   update:
-    runs-on: windows-latest
+    runs-on: [ windows-latest ]
 
     steps:
       - name: Creating a new test app
