--- a/Templates/Per Tenant Extension/.AL-Go/settings.json
+++ b/Templates/Per Tenant Extension/.AL-Go/settings.json
@@ -1,6 +1,7 @@
 {
     "type": "PTE",
     "country": "us",
+    "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main",
     "appFolders": [
     ],
     "testFolders": [
