--- a/Actions/AddExistingApp/action.yaml
+++ b/Actions/AddExistingApp/action.yaml
@@ -12,6 +12,10 @@ inputs:
     description: The GitHub token running the action
     required: false
     default: ${{ github.token }}
+  parentCorrelationId:
+    description: Specifies the parent correlation Id for the Telemetry signal
+    required: false
+    default: ''       
   url:
     description: Direct Download Url of .app or .zip file
     required: true
@@ -22,7 +26,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/AddExistingApp.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -url '${{ inputs.url }}' -directCommit ('${{ inputs.directCommit }}' -eq 'Y')
+    - run: ${{ github.action_path }}/AddExistingApp.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -url '${{ inputs.url }}' -directCommit ('${{ inputs.directCommit }}' -eq 'Y') -parentCorrelationId '${{ inputs.parentCorrelationId }}' -telemetryEventId 'DO0070'
       shell: PowerShell
 branding:
   icon: terminal
