--- a/Actions/CreateDevelopmentEnvironment/action.yaml
+++ b/Actions/CreateDevelopmentEnvironment/action.yaml
@@ -12,6 +12,10 @@ inputs:
     description: The GitHub token running the action
     required: false
     default: ${{ github.token }}
+  parentCorrelationId:
+    description: Specifies the parent correlation Id for the Telemetry signal
+    required: false
+    default: '' 
   environmentName:
     description: Name of the online environment
     required: true
@@ -30,7 +34,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/CreateDevelopmentEnvironment.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -environmentName '${{ inputs.environmentName }}' -adminCenterApiCredentials '${{ inputs.adminCenterApiCredentials }}' -reUseExistingEnvironment ('${{ inputs.reUseExistingEnvironment }}' -eq 'Y') -directCommit ('${{ inputs.directCommit }}' -eq 'Y')
+    - run: ${{ github.action_path }}/CreateDevelopmentEnvironment.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -environmentName '${{ inputs.environmentName }}' -adminCenterApiCredentials '${{ inputs.adminCenterApiCredentials }}' -reUseExistingEnvironment ('${{ inputs.reUseExistingEnvironment }}' -eq 'Y') -directCommit ('${{ inputs.directCommit }}' -eq 'Y') -parentCorrelationId '${{ inputs.parentCorrelationId }}' -telemetryEventId 'DO0073'
       shell: PowerShell
 branding:
   icon: terminal
