--- a/Actions/CreateReleaseNotes/action.yaml
+++ b/Actions/CreateReleaseNotes/action.yaml
@@ -12,6 +12,10 @@ inputs:
     description: The GitHub token running the action
     required: false
     default: ${{ github.token }}
+  parentCorrelationId:
+    description: Specifies the parent correlation Id for the Telemetry signal
+    required: false
+    default: '' 
   workflowToken:
     description: A GitHub token with permissions to modify workflows
     required: false
@@ -22,7 +26,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/CreateReleaseNotes.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -workflowToken '${{ inputs.workflowToken }}' -tag_name '${{ inputs.tag_name }}'
+    - run: ${{ github.action_path }}/CreateReleaseNotes.ps1 -actor '${{ inputs.actor }}' -token '${{ inputs.token }}' -workflowToken '${{ inputs.workflowToken }}' -tag_name '${{ inputs.tag_name }}' -parentCorrelationId '${{ inputs.parentCorrelationId }}' -telemetryEventId 'DO0074'
       shell: PowerShell
 outputs:
   ReleaseNotes:
