--- a/Actions/PipelineCleanup/action.yaml
+++ b/Actions/PipelineCleanup/action.yaml
@@ -5,10 +5,14 @@ inputs:
     description: Project folder
     required: false
     default: '.'
+  parentCorrelationId:
+    description: Specifies the parent correlation Id for the Telemetry signal
+    required: false
+    default: '' 
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/PipelineCleanup.ps1 -project '${{ inputs.project }}'
+    - run: ${{ github.action_path }}/PipelineCleanup.ps1 -project '${{ inputs.project }}' -parentCorrelationId '${{ inputs.parentCorrelationId }}' -telemetryEventId 'DO0077'
       shell: PowerShell
 branding:
   icon: terminal
