--- a/Templates/AppSource App/.github/workflows/CreateApp.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateApp.yaml
@@ -22,8 +22,20 @@ defaults:
     shell: PowerShell
 
 jobs:
-  update:
+  initialization :
     runs-on: windows-latest
+    outputs:
+      telemetryScope: ${{ steps.init.outputs.telemetryScope }}
+      correlationId: ${{ steps.init.outputs.correlationId }}  
+    steps:
+      - id: init
+        uses: microsoft/AL-Go/InitWorkflow@main
+        with: 
+          workflowName : "DO0092"
+
+  createApp:
+    runs-on: windows-latest
+    needs : [ initialization ]
 
     steps:
       - name: Checkout
@@ -42,3 +54,14 @@ jobs:
           name: ${{ github.event.inputs.name }}
           idrange: ${{ github.event.inputs.idrange }}
           directCommit: ${{ github.event.inputs.directCommit }}
+
+  postProcess :
+    runs-on: windows-latest
+    needs : [ initialization , createApp ]
+    steps:
+      - name: Finalizing the workflow
+        id : postProcess
+        uses: microsoft/AL-Go/workflowpostprocess@main
+        with: 
+          workflowName : "DO0092"
+          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}
