--- a/Templates/Per Tenant Extension/.github/workflows/CreateApp.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateApp.yaml
@@ -20,11 +20,21 @@ on:
 defaults:
   run:
     shell: PowerShell
-
 jobs:
-  update:
+  initialization :
     runs-on: windows-latest
+    outputs:
+      telemetryScope: ${{ steps.init.outputs.telemetryScope }}
+      correlationId: ${{ steps.init.outputs.correlationId }}  
+    steps:
+      - id: init
+        uses: microsoft/AL-Go/InitWorkflow@main
+        with: 
+          workflowName : "DO0092"
 
+  createApp :
+    runs-on: windows-latest
+    needs : [ initialization ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -32,6 +42,7 @@ jobs:
       - name: Read settings
         uses: microsoft/AL-Go/ReadSettings@main
         with:
+          parentCorrelationId: ${{ needs.initialization.outputs.correlationId }}
           get: type
 
       - name: Creating a new app
@@ -42,3 +53,15 @@ jobs:
           publisher: ${{ github.event.inputs.publisher }}
           idrange: ${{ github.event.inputs.idrange }}
           directCommit: ${{ github.event.inputs.directCommit }}
+          parentCorrelationId : ${{ needs.initialization.outputs.correlationId }}
+
+  postProcess :
+    runs-on: windows-latest
+    needs : [ initialization , createApp ]
+    steps:
+      - name: Finalizing the workflow
+        id : postProcess
+        uses: microsoft/AL-Go/workflowpostprocess@main
+        with: 
+          workflowName : "DO0092"
+          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}
