--- a/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
@@ -20,8 +20,20 @@ defaults:
     shell: PowerShell
 
 jobs:
+  initialization :
+    runs-on: windows-latest
+    outputs:
+      telemetryScope: ${{ steps.init.outputs.telemetryScope }}
+      correlationId: ${{ steps.init.outputs.correlationId }}  
+    steps:
+      - id: init
+        uses: microsoft/AL-Go/InitWorkflow@main
+        with: 
+          workflowName : "DO0093"
+
   CreateEnvironment:
     runs-on: windows-latest
+    needs : [ initialization ]
 
     steps:
       - name: Checkout
@@ -29,12 +41,15 @@ jobs:
 
       - name: Read settings
         uses: microsoft/AL-Go/ReadSettings@main
+        with:
+          parentCorrelationId: ${{ needs.initialization.outputs.correlationId }}
 
       - name: Read secrets
         uses: microsoft/AL-Go/ReadSecrets@main
         env:
           secrets: ${{ toJson(secrets) }}
         with:
+          parentCorrelationId: ${{ needs.initialization.outputs.correlationId }}
           settingsJson: ${{ env.Settings }}
           secrets: 'adminCenterApiCredentials'
 
@@ -49,7 +64,7 @@ jobs:
             $ALGoHelperPath = "$([System.IO.Path]::GetTempFileName()).ps1"
             $webClient = New-Object System.Net.WebClient
             $webClient.CachePolicy = New-Object System.Net.Cache.RequestCachePolicy -argumentList ([System.Net.Cache.RequestCacheLevel]::NoCacheNoStore)
-            $webClient.DownloadFile('https://raw.githubusercontent.com/microsoft/AL-Go/main/AL-Go-Helper.ps1', $ALGoHelperPath)
+            $webClient.DownloadFile('https://raw.githubusercontent.com/microsoft/AL-Go/main/Helpers/AL-Go-Helper.ps1', $ALGoHelperPath)
             . $ALGoHelperPath -local
             DownloadAndImportBcContainerHelper
             $authContext = New-BcAuthContext -includeDeviceLogin -deviceLoginTimeout ([TimeSpan]::FromSeconds(0))
@@ -60,6 +75,7 @@ jobs:
       - name: Create Development Environment
         uses: microsoft/AL-Go/CreateDevelopmentEnvironment@main
         with:
+          parentCorrelationId: ${{ needs.initialization.outputs.correlationId }}
           environmentName: ${{ github.event.inputs.environmentName }} 
           reUseExistingEnvironment: ${{ github.event.inputs.reUseExistingEnvironment }} 
           adminCenterApiCredentials: ${{ env.adminCenterApiCredentials }} 
