--- a/Templates/Per Tenant Extension/.github/workflows/CreateTestApp.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateTestApp.yaml
@@ -24,13 +24,26 @@ defaults:
     shell: PowerShell
 
 jobs:
+  initialization :
+    runs-on: windows-latest
+    outputs:
+      telemetryScope: ${{ steps.init.outputs.telemetryScope }}
+      correlationId: ${{ steps.init.outputs.correlationId }}  
+    steps:
+      - id: init
+        uses: microsoft/AL-Go/InitWorkflow@main
+        with: 
+          workflowName : "DO0095"
+
   update:
     runs-on: windows-latest
+    needs : [ initialization ]
 
     steps:
       - name: Creating a new test app
         uses: microsoft/AL-Go/CreateApp@main
         with:
+          parentCorrelationId: ${{ needs.initialization.outputs.correlationId }}
           type: 'Test App'
           publisher: ${{ github.event.inputs.publisher }}
           name: ${{ github.event.inputs.name }}
