--- a/Templates/AppSource App/.github/workflows/CICD.yaml
+++ b/Templates/AppSource App/.github/workflows/CICD.yaml
@@ -23,12 +23,11 @@ jobs:
     runs-on: windows-latest
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
-      correlationId: ${{ steps.init.outputs.correlationId }}  
     steps:
       - id: init
         uses: microsoft/AL-Go/InitWorkflow@main
         with: 
-          workflowName : "DO0091"
+          eventId : "DO0091"
 
   CheckForUpdates:
     runs-on: windows-latest
@@ -40,11 +39,13 @@ jobs:
       - name: Read settings
         uses: microsoft/AL-Go/ReadSettings@main
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           get: TemplateUrl,TemplateBranch
 
       - name: Check for updates to AL-Go system files
         uses: microsoft/AL-Go/CheckForUpdates@main
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           templateUrl: ${{ env.TemplateUrl }}
           templateBranch: ${{ env.TemplateBranch }}
   Analyze:
@@ -117,6 +118,7 @@ jobs:
       - name: Read settings
         uses: microsoft/AL-Go/ReadSettings@main
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           project: ${{ matrix.project }}
 
       - name: Read secrets
@@ -124,6 +126,7 @@ jobs:
         env:
           secrets: ${{ toJson(secrets) }}
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           settingsJson: ${{ env.Settings }}
           secrets: 'licenseFileUrl,insiderSasToken,CodeSignCertificateUrl,CodeSignCertificatePassword,KeyVaultCertificateUrl,KeyVaultCertificatePassword,KeyVaultClientId'
 
@@ -184,6 +187,7 @@ jobs:
         if: always()
         uses: microsoft/AL-Go/PipelineCleanup@main
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           Project: ${{ matrix.project }}
   Deploy:
     runs-on: windows-latest
@@ -207,7 +211,19 @@ jobs:
         env:
           authContext: '${{ secrets.AuthContext }}'
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}     
           type: 'CD'
           projects: '${{ secrets.Projects }}'
           environmentName: ${{ matrix.environment }}
           artifacts: '${{ github.workspace }}\artifacts'
+
+  postProcess :
+    runs-on: windows-latest
+    needs : [ initialization ,  Analyze, Build , Deploy ]
+    steps:
+      - name: Finalizing the workflow
+        id : postProcess
+        uses: microsoft/AL-Go/workflowpostprocess@main
+        with: 
+          eventId : "DO0091"
+          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}             
