--- a/Templates/AppSource App/.github/workflows/CreateRelease.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateRelease.yaml
@@ -35,12 +35,11 @@ jobs:
     runs-on: windows-latest
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
-      correlationId: ${{ steps.init.outputs.correlationId }}  
     steps:
       - id: init
         uses: microsoft/AL-Go/InitWorkflow@main
         with: 
-          workflowName : "DO0094"
+          eventId : "DO0094"
 
   CreateRelease:
     runs-on: windows-latest
@@ -60,6 +59,7 @@ jobs:
       - name: Check for updates to AL-Go system files
         uses: microsoft/AL-Go/CheckForUpdates@main
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           templateUrl: ${{ env.TemplateUrl }}
           templateBranch: ${{ env.TemplateBranch }}
 
@@ -95,6 +95,7 @@ jobs:
         id: createreleasenotes
         uses: microsoft/AL-Go/CreateReleaseNotes@main
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           tag_name: '${{github.event.inputs.tag}}'
 
       - name: Create release
@@ -130,7 +131,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           upload_url: ${{ needs.createrelease.outputs.upload_url }}
           asset_path: '${{ matrix.name }}.zip'
           asset_name: '${{ matrix.name }}.zip'
           asset_content_type: application/zip
+
+  postProcess :
+    runs-on: windows-latest
+    needs : [ initialization , CreateRelease, UploadArtifacts ]
+    steps:
+      - name: Finalizing the workflow
+        id : postProcess
+        uses: microsoft/AL-Go/workflowpostprocess@main
+        with: 
+          eventId : "DO0094"
+          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}  
