--- a/Templates/AppSource App/.github/workflows/CreateTestApp.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateTestApp.yaml
@@ -28,12 +28,11 @@ jobs:
     runs-on: windows-latest
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
-      correlationId: ${{ steps.init.outputs.correlationId }}  
     steps:
       - id: init
         uses: microsoft/AL-Go/InitWorkflow@main
         with: 
-          workflowName : "DO0095"
+          eventId : "DO0095"
 
   update:
     runs-on: windows-latest
@@ -43,8 +42,20 @@ jobs:
       - name: Creating a new test app
         uses: microsoft/AL-Go/CreateApp@main
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           type: 'Test App'
           publisher: ${{ github.event.inputs.publisher }}
           name: ${{ github.event.inputs.name }}
           idrange: ${{ github.event.inputs.idrange }}
           directCommit: ${{ github.event.inputs.directCommit }}
+          
+  postProcess :
+    runs-on: windows-latest
+    needs : [ initialization , update ]
+    steps:
+      - name: Finalizing the workflow
+        id : postProcess
+        uses: microsoft/AL-Go/workflowpostprocess@main
+        with: 
+          eventId : "DO0095"
+          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}    
