--- a/Templates/AppSource App/.github/workflows/PublishToEnvironment.yaml
+++ b/Templates/AppSource App/.github/workflows/PublishToEnvironment.yaml
@@ -21,12 +21,11 @@ jobs:
     runs-on: windows-latest
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
-      correlationId: ${{ steps.init.outputs.correlationId }}  
     steps:
       - id: init
         uses: microsoft/AL-Go/InitWorkflow@main
         with: 
-          workflowName : "DO0097"
+          eventId : "DO0097"
 
   Environments:
     runs-on: windows-latest
@@ -71,7 +70,19 @@ jobs:
         env:
           authContext: '${{ secrets.AuthContext }}'
         with:
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           type: 'Publish'
           projects: '${{ secrets.Projects }}'
           environmentName: ${{ matrix.environment }}
           artifacts: ${{ github.event.inputs.appVersion }}
+
+  postProcess :
+    runs-on: windows-latest
+    needs : [ initialization , Environments , Deploy ]
+    steps:
+      - name: Finalizing the workflow
+        id : postProcess
+        uses: microsoft/AL-Go/workflowpostprocess@main
+        with: 
+          eventId : "DO0097"
+          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}  
