--- a/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
@@ -24,12 +24,11 @@ jobs:
     runs-on: windows-latest
     outputs:
       telemetryScope: ${{ steps.init.outputs.telemetryScope }}
-      correlationId: ${{ steps.init.outputs.correlationId }}  
     steps:
       - id: init
         uses: microsoft/AL-Go/InitWorkflow@main
         with: 
-          workflowName : "DO0093"
+          eventId : "DO0093"
 
   CreateEnvironment:
     runs-on: windows-latest
@@ -42,14 +41,14 @@ jobs:
       - name: Read settings
         uses: microsoft/AL-Go/ReadSettings@main
         with:
-          parentCorrelationId: ${{ needs.initialization.outputs.correlationId }}
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
 
       - name: Read secrets
         uses: microsoft/AL-Go/ReadSecrets@main
         env:
           secrets: ${{ toJson(secrets) }}
         with:
-          parentCorrelationId: ${{ needs.initialization.outputs.correlationId }}
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           settingsJson: ${{ env.Settings }}
           secrets: 'adminCenterApiCredentials'
 
@@ -75,7 +74,18 @@ jobs:
       - name: Create Development Environment
         uses: microsoft/AL-Go/CreateDevelopmentEnvironment@main
         with:
-          parentCorrelationId: ${{ needs.initialization.outputs.correlationId }}
+          parentTelemetryScope: ${{ needs.initialization.outputs.telemetryScope }}
           environmentName: ${{ github.event.inputs.environmentName }} 
           reUseExistingEnvironment: ${{ github.event.inputs.reUseExistingEnvironment }} 
           adminCenterApiCredentials: ${{ env.adminCenterApiCredentials }} 
+
+  postProcess :
+    runs-on: windows-latest
+    needs : [ initialization ,  CreateEnvironment ]
+    steps:
+      - name: Finalizing the workflow
+        id : postProcess
+        uses: microsoft/AL-Go/workflowpostprocess@main
+        with: 
+          eventId : "DO0093"
+          telemetryScope : ${{ needs.initialization.outputs.telemetryScope }}   
