event id should be mandatory

--- a/Actions/InitWorkflow/action.yaml
+++ b/Actions/InitWorkflow/action.yaml
@@ -3,7 +3,7 @@ author: Pooya Kharamesh
 inputs:
   eventId:
       description: The event Id of the workflow
-      required: false
+      required: true
 
 runs:
   using: composite
